# ManualRoller

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE.bzlmod  hello-world.cpp  module.json
.github/workflows/: main.yml
FoundryModule/: HOWTO.md
FoundryModule/scripts/: manualroller.mjs
FoundryModule/scripts/lib/: manual-roller-config.mjs
FoundryModule/templates/: manual-roller-config.hbs
bazel/cpp/: defs.bzl
scripts/: manualroller.mjs
scripts/lib/: manual-roller-config.mjs  manual-roller-resolver.js
templates/: manual-roller-config.hbs
